<resources>
    <string name="app_name">LuNo</string>
    <string name="app_name_2">LUNO</string>
    <string name="username">Kullanıcı Adı:</string>
    <string name="password">Şifre giriniz:</string>
    <string name="user_name_enter">Kullanıcı Adı Giriniz:</string>
    <string name="enter">Giriş</string>
    <string name="register">Kayıt ol</string>
    <string name="E_mail">E-posta Giriniz:</string>
    <string name="tamamla">Tamamla</string>
    <string name="Play">Play</string>
    <string name="DOG">DOG</string>
    <string name="CAT">CAT</string>
    <string name="BIRD">BIRD</string>
    <string name="WOLF">WOLF</string>
    <string name="PARROT">PARROT</string>
    <string name="DUCK">DUCK</string>
    <string name="SQUIRREL">SQUIRREL</string>
    <string name="BULL">BULL</string>
    <string name="DOLPHIN">DOLPHIN</string>
    <string name="BEAR">BEAR</string>
    <string name="PIG">PIG</string>
    <string name="LION">LION</string>
    <string name="TIGER">TIGER</string>
    <string name="BUG">BUG</string>
    <string name="TURTLE">TURTLE</string>
    <string name="Music">MUSİC</string>
    <string name="Notiflication">Notifilacion</string>
    <string name="SaveAndExit">Save And Exit</string>
    <string name="ScoreBaslik">Score Table</string>
    <string name="Exit">Back</string>

</resources>


