<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround2"
    android:padding="10dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/app_name_2"
        android:textColor="@color/BackGround"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/musicSwitchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text"
        tools:ignore="MissingConstraints">

        <Switch
            android:id="@+id/switch_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bangers"
            android:text="@string/Music"
            android:textColor="@color/BackGround2"
            android:textSize="40sp"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/switch_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/touchSensitivityContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicSwitchContainer"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="Touch Sensitivity"
            android:textColor="@color/BackGround2"
            android:textSize="40sp" />

        <SeekBar
            android:id="@+id/touch_sensitivity_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/BackGround2"
            android:progressTint="@color/BackGround2"
            android:thumbTint="@color/BackGround2"
            android:max="100"
            android:progress="50" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notificationSwitchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/touchSensitivityContainer"
        tools:ignore="MissingConstraints">

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/bangers"
            android:text="@string/Notiflication"
            android:textColor="@color/BackGround2"
            android:textSize="40sp"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/switch_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/Enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/BackGround"
        android:text="@string/SaveAndExit"
        android:textColor="@color/BackGround2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationSwitchContainer"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
