<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:soundEffectsEnabled="true"
        android:text="@string/app_name_2"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/LUNO"
        android:enabled="false"
        android:textSize="80sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/UserNameSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/register_border"
        android:hint="Adınız ve Soyadınız:"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/register_border"
        android:hint="@string/E_mail"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"

        android:textStyle="bold"
        android:typeface="serif" />
    <EditText
        android:id="@+id/Player_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/register_border"
        android:hint="Kullanıcı Adı oluşturun:"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/register_border"
        android:hint="Şifre oluşturun:"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/Password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/register_border"
        android:hint="Tekrardan Şifre Giriniz:"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/LUNO"
        android:onClick="Submit"
        android:text="@string/tamamla"
        android:textColor="@color/BackGround"
        android:textSize="18sp" />

  </LinearLayout>